testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail07.stderr

overloadedrecfldsfail07.hs:7:7: error:
    • Couldn't match expected type ‘T’ with actual type ‘T -> Int’
    • In the first argument of ‘x’, namely ‘x’
      In the expression: x x
      In an equation for ‘y’: y = x x
